--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ footer {
 .game-info h3 {
   margin: 6px 0 2px;
   font-size: 1.1em;
-  color: white;
+  color: black;
 }
 
 .game-info .credits {
